NewArchive/a87b9fddcb6fefc7a470a04255493571-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:6:24: error: template argument 1 is invalid
   Foo<static_cast<int>(100 >> 1)> x;
                        ^
main.cpp:6:28: error: expected unqualified-id before ‘>’ token
   Foo<static_cast<int>(100 >> 1)> x;
                            ^
